# ESP32-Person-Detection-And-Monitoring-System

./: CMakeLists.txt  Readme.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  camera_handler.c  camera_handler.h  hcsr04.c  hcsr04.h  idf_component.yml  led_control.c  led_control.h  main.cpp  person_detect_model_data.h
